--- a/codespace/my-app/src/main/resources/public/main.html
+++ b/codespace/my-app/src/main/resources/public/main.html
@@ -508,6 +508,53 @@
             background: #f3f4f6;
             transform: translateX(2px);
         }
+
+        /* ===== MOBILE TOUCH & VISIBILITY FIX ===== */
+@media (max-width: 480px) {
+
+    button {
+        min-height: 44px;
+        font-size: 15px;
+    }
+
+    input {
+        min-height: 44px;
+        font-size: 16px;
+    }
+
+    .delete-input-btn {
+        width: 36px;
+        height: 36px;
+        font-size: 18px;
+    }
+
+    .add-input-row {
+        flex-direction: column;
+        gap: 8px;
+    }
+
+    .add-to-param-btn {
+        width: 100%;
+        min-height: 44px;
+    }
+
+    .param-header {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 8px;
+    }
+
+    .delete-param-btn {
+        width: 100%;
+        min-height: 40px;
+    }
+
+    input[type="file"] {
+        width: 100%;
+        font-size: 15px;
+        padding: 10px;
+    }
+}
         
         /* Responsive adjustments */
         @media (max-width: 768px) {
@@ -605,7 +652,12 @@
         <!-- XML Import / Export -->
         <div class="input-row">
             <button class="add-btn" onclick="exportToXML()">Export XML</button>
-            <input type="file" id="xmlFileInput" accept=".xml" onchange="importFromXML(event)">
+            <input 
+    type="file"
+    id="xmlFileInput"
+    accept=".xml,text/xml,application/xml,*/*"
+    onchange="importFromXML(event)"
+>
         </div>
         
         <!-- Tables Container (Grouped by input count) -->
