--- a/codespace/my-app/src/main/resources/public/main.html
+++ b/codespace/my-app/src/main/resources/public/main.html
@@ -658,7 +658,6 @@
 
 
 .footer-logo {
-    height: 45px;
     opacity: 0.85;
 }
 
@@ -675,7 +674,7 @@
 
         <div class="footer-logos">
         <img src="images/unimap logo.png" class="footer-logo" alt="UniMAP Logo">
-        <img src="images/kpt logo.png" class="footer-logo" alt="ADVCOMP Logo">
+        <img src="images/kpt-logo.png" class="footer-logo" alt="KPT Logo">
         <img src="images/thursinar.png" class="footer-logo" alt="Thursinar Logo">
     </div>
 
