Fix Option B double backend call causing 502

--- a/codespace/my-app/src/main/resources/public/main.html
+++ b/codespace/my-app/src/main/resources/public/main.html
@@ -540,6 +540,14 @@
         /* ===== MOBILE TOUCH & VISIBILITY FIX ===== */
 @media (max-width: 480px) {
 
+  .footer-logos {
+        gap: 12px;
+    }
+
+    .footer-logos img {
+        height: 42px;
+    }
+
     button {
         min-height: 44px;
         font-size: 15px;
