Fix Option B double backend call causing 502

--- a/codespace/my-app/src/main/resources/public/main.html
+++ b/codespace/my-app/src/main/resources/public/main.html
@@ -594,6 +594,15 @@
         
         /* Responsive adjustments */
         @media (max-width: 768px) {
+          .footer-logos {
+        flex-direction: column;
+        gap: 12px;
+    }
+
+    .footer-logos img {
+        height: 45px;
+        max-width: 90%;
+    }
             .parameter-tables {
         grid-template-columns: 1fr; /* Single column on mobile */
     }
