Fix Option B double backend call causing 502

--- a/codespace/my-app/src/main/resources/public/main.html
+++ b/codespace/my-app/src/main/resources/public/main.html
@@ -601,7 +601,7 @@
 
     .footer-logos img {
         height: 45px;
-        max-width: 90%;
+        width: auto;
     }
             .parameter-tables {
         grid-template-columns: 1fr; /* Single column on mobile */
