--- a/codespace/my-app/src/main/resources/public/main.html
+++ b/codespace/my-app/src/main/resources/public/main.html
@@ -596,12 +596,16 @@
         @media (max-width: 768px) {
           .footer-logos {
         flex-direction: column;
-        gap: 12px;
+        align-items: center;
+        gap: 18px;
+        margin-bottom: 28px;
     }
 
     .footer-logos img {
-        height: 45px;
-        width: auto;
+        height: auto;
+        max-height: 70px;   /* preserves visual depth */
+        max-width: 92%;
+        object-fit: contain;
     }
             .parameter-tables {
         grid-template-columns: 1fr; /* Single column on mobile */
